ADD seperate index.html

--- a/AI/index.html
+++ b/AI/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div class="container">
-        <p><a href="./AI">AI</a></p>
+        <p><a href="./layer_norm.html">Layer Norm & Adaptive Layer Norm</a></p>
     </div>
 </body>
 </html>
