--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div class="container">
-        <p><a href="./AI">AI</a></p>
+        <p><a href="./AI/">AI</a></p>
     </div>
 </body>
 </html>
