ADD: Mandelbrot Set

--- a/Math/index.html
+++ b/Math/index.html
@@ -22,8 +22,7 @@
 </head>
 <body>
     <div class="container">
-        <p><a href="./AI/">AI</a></p>
-        <p><a href="./Math/">Math</a></p>
+        <p><a href="./mandelbrot_set.html">Mandelbrot Set</a></p>
     </div>
 </body>
 </html>
