--- a/AI/index.html
+++ b/AI/index.html
@@ -21,6 +21,12 @@
     </style>
 </head>
 <body>
+    <div style="display: flex; justify-content: space-between; width: 80%; padding: 10px 20px; box-sizing: border-box; background-color: transparent; border-bottom: 1px solid #ccc;">
+        <a href="../">Back</a>
+        <a href="https://github.com/irgb/Awesome_AI_Artifacts">
+            <img src="/assets/github-logo.svg" alt="GitHub" width="24" height="24">
+        </a>
+    </div>
     <div class="container">
         <p><a href="./layer_norm.html">Layer Norm & Adaptive Layer Norm</a></p>
     </div>
