--- a/AI/layer_norm.html
+++ b/AI/layer_norm.html
@@ -35,6 +35,13 @@
     </style>
 </head>
 <body>
+    <div style="display: flex; justify-content: space-between; width: 80%; padding: 10px 20px; box-sizing: border-box; background-color: transparent; border-bottom: 1px solid #ccc;">
+        <a href="./">Back</a>
+        <a href="https://claude.site/artifacts/6b410718-a55b-49b7-9750-25ac3e6c65e5">Source Code</a>
+        <a href="https://github.com/irgb/Awesome_AI_Artifacts">
+            <img src="/assets/github-logo.svg" alt="GitHub" width="24" height="24">
+        </a>
+    </div>
     <h2>Layer Normalization vs Adaptive Layer Normalization</h2>
     <p>Adjust the sliders to see the effect of gamma and beta on the adaptive layer normalization.</p>
     <div class="formula-container">
