--- a/AI/layer_norm.html
+++ b/AI/layer_norm.html
@@ -38,9 +38,7 @@
     <div style="display: flex; justify-content: space-between; width: 80%; padding: 10px 20px; box-sizing: border-box; background-color: transparent; border-bottom: 1px solid #ccc; margin: 0 auto;">
         <a href="./">Back</a>
         <a href="">Made with Claude</a>
-        <a href="https://github.com/irgb/Awesome_AI_Artifacts">
-            <img src="/assets/github-logo.svg" alt="GitHub" width="24" height="24">
-        </a>
+        <a href="https://github.com/irgb/Awesome_AI_Artifacts">Submit your artifacts</a>
     </div>
     <h2>Layer Normalization vs Adaptive Layer Normalization</h2>
     <p>Adjust the sliders to see the effect of gamma and beta on the adaptive layer normalization.</p>
