--- a/Math/mandelbrot_set.html
+++ b/Math/mandelbrot_set.html
@@ -34,9 +34,7 @@
     <div style="display: flex; justify-content: space-between; width: 80%; padding: 10px 20px; box-sizing: border-box; background-color: transparent; border-bottom: 1px solid #ccc; margin: 0 auto;">
         <a href="./">Back</a>
         <a href="https://claude.site/artifacts/6b410718-a55b-49b7-9750-25ac3e6c65e5">Made with Claude</a>
-        <a href="https://github.com/irgb/Awesome_AI_Artifacts">
-            <img src="/assets/github-logo.svg" alt="GitHub" width="24" height="24">
-        </a>
+        <a href="https://github.com/irgb/Awesome_AI_Artifacts">Submit your artifacts</a>
     </div>
     <h1>Mandelbrot Set: z<sub>n+1</sub> = z<sub>n</sub><sup>2</sup> + c</h1>
     <canvas id="mandelbrotCanvas" width="600" height="400"></canvas>
