--- a/Math/index.html
+++ b/Math/index.html
@@ -23,9 +23,7 @@
 <body>
     <div style="display: flex; justify-content: space-between; width: 80%; padding: 10px 20px; box-sizing: border-box; background-color: transparent; border-bottom: 1px solid #ccc; margin: 0 auto;">
         <a href="../">Back</a>
-        <a href="https://github.com/irgb/Awesome_AI_Artifacts">
-            <img src="/assets/github-logo.svg" alt="GitHub" width="24" height="24">
-        </a>
+        <a href="https://github.com/irgb/Awesome_AI_Artifacts">Submit your artifacts</a>
     </div>
     <div class="container">
         <p><a href="./mandelbrot_set.html">Mandelbrot Set</a></p>
