ADD: English version of sine function and line variance visualization tool MODIFY: Update index.html to include link to the new visualization tool ADD: Navigation bar with back button to the visualization page

--- a/Math/index.html
+++ b/Math/index.html
@@ -27,6 +27,7 @@
     </div>
     <div class="container">
         <p><a href="./mandelbrot_set.html">Mandelbrot Set</a></p>
+        <p><a href="./research_variance_visiualization_of_line_and_sin.html">Sine Function and Line Variance Visualization</a></p>
     </div>
 </body>
 </html>
