ADD: Navigation bar to the sine function and line variance visualization page

--- a/Math/research_variance_visiualization_of_line_and_sin.html
+++ b/Math/research_variance_visiualization_of_line_and_sin.html
@@ -99,6 +99,11 @@
     </style>
 </head>
 <body>
+    <div style="display: flex; justify-content: space-between; width: 80%; padding: 10px 20px; box-sizing: border-box; background-color: transparent; border-bottom: 1px solid #ccc; margin: 0 auto;">
+        <a href="./">Back</a>
+        <a href="https://claude.site/artifacts/6b410718-a55b-49b7-9750-25ac3e6c65e5">Made with Claude</a>
+        <a href="https://github.com/irgb/Awesome_AI_Artifacts">Submit your artifacts</a>
+    </div>
     <div class="container">
         <h1>Sine Function and Line Variance Visualization Tool</h1>
         
